--- a/css/_tpl/info.css
+++ b/css/_tpl/info.css
@@ -103,7 +103,7 @@ h2 label {
 }
 
 .icons_service {
-    margin: auto;
+  /*  margin: auto; */
 }
 
 .block_service {
@@ -127,7 +127,7 @@ h2 label {
    box-shadow: 0px 0px 0px grey;
     -webkit-transition:  box-shadow .4s ease-out;
     box-shadow: .0px .2px 2px grey;
-    min-height: 450px;
+    min-height: 555px;
   }
 
 
