--- a/css/_tpl/cu-directorio.css
+++ b/css/_tpl/cu-directorio.css
@@ -11,6 +11,15 @@ body {
     font-weight: 100;
 }
 
+.title-page h5 {
+    color: #fff;
+    font-family: "Lato-BlackItalic", sans-serif;
+    text-shadow: 3px 3px #000;
+    margin-left: 90px;
+    position: absolute;
+    z-index: 1;
+}
+
 p.text-x2 {
     font-size: 20px;
 }
@@ -84,6 +93,7 @@ h2 {
 
 }
 
+
 .card-cabecera {
     background-color: #13719c;
     font-family: "Lato-BlackItalic", sans-serif;
@@ -127,7 +137,7 @@ h2 label {
    box-shadow: 0px 0px 0px grey;
     -webkit-transition:  box-shadow .4s ease-out;
     box-shadow: .0px .2px 2px grey;
-    min-height: 555px;
+    min-height: 850px;
   }
 
 
@@ -250,6 +260,15 @@ h2 label {
     text-decoration: none;
 }
 
+@media (min-width: 420px) {
+
+    .title-page h5 {
+        font-size: 3.0em;
+        top: 20%;
+    }
+
+}
+
 @media (min-width: 576px) {
 
     .carreras h1 {
@@ -274,6 +293,8 @@ h2 label {
         font-size: 23px;
     }
 
+ 
+
 }
 
 @media (min-width: 768px) {
@@ -287,7 +308,7 @@ h2 label {
         line-height: 1;
     }
 
-
+  
 
 }
 
@@ -314,6 +335,8 @@ h2 label {
         font-size: 20px;
     }
 
+  
+
 }
 
 @media (min-width: 1200px) {
@@ -329,6 +352,12 @@ h2 label {
 
     .banner::after {
         height: 100px;
+        }
+
+       
+        .title-page h5 {
+            font-size: 5.0em;
+            top: 50%;
         }
 
 }
